Text overflow issue fixed (#7)
* Text overflow issue fixed

* Update README.md

* Refresh patched

--- a/app/styles/partials/moksha-volunteers.scss
+++ b/app/styles/partials/moksha-volunteers.scss
@@ -4,7 +4,7 @@
 
 .orange-card {
     background: rgba(255, 165, 0, 0.2);
-    height: 25vh;
+    height: 100% !important;
 }
 
 .card-text {
